--- a/geo-app/index.html
+++ b/geo-app/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+     <!--Import Google Icon Font-->
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCksn1rqzJZR8DHuWxdOj3ZxBveSfXFF74"></script>
     <title>geo-app</title>
   </head>
   <body>
